* Finished translating learnopengl's in practice chapter * Spell-checked all posts

--- a/_posts/learnopengl/1_getting_started/2017-07-10-opengl.md
+++ b/_posts/learnopengl/1_getting_started/2017-07-10-opengl.md
@@ -29,7 +29,7 @@ Podczas używania core-profile, OpenGL wymusza na nas używania nowoczesnych pra
 
 Jest to również powód, dla którego nasze kursy są skoncentrowane na Core-Profile OpenGL w wersji 3.3\. Chociaż jest to trudne, to jest warte włożenia w to wysiłku.
 
-Obecnie dostępne są nowsze wersje OpenGL (w czasie pisania artykuły wersja 4.5). Możnaby zapytać: dlaczego mam się uczyć OpenGL 3.3 skoro dostępna jest wersja 4.5? Odpowiedź na to pytanie jest relatywnie prosta. Wszystkie przyszłe wersje OpenGL poczynając od wersji 3.3 dodają nowe, użyteczne funkcjonalności do OpenGL bez wprowadzania zmian w rdzennych mechanikach działania OpenGL; nowsze wersje po prostu wprowadzają trochę bardziej wydajne lub bardziej użyteczne sposoby rozwiązywania tych samych zadań. W rezultacie wszystkie koncepty, idee i techniki pozostają te same dla wszystkich nowoczesnych wersji OpenGL, a więc jest to dobre, by zacząć naukę OpenGL od wersji 3.3\. Kiedy tylko będziesz czuł się gotowy lub bardziej doświadczony, będziesz mógł bez większych problemów użyć konkretnych funkcjonalności z nowszych wersji OpenGL.
+Obecnie dostępne są nowsze wersje OpenGL (w czasie pisania artykuły wersja 4.5). Można by zapytać: dlaczego mam się uczyć OpenGL 3.3 skoro dostępna jest wersja 4.5? Odpowiedź na to pytanie jest relatywnie prosta. Wszystkie przyszłe wersje OpenGL poczynając od wersji 3.3 dodają nowe, użyteczne funkcjonalności do OpenGL bez wprowadzania zmian w rdzennych mechanikach działania OpenGL; nowsze wersje po prostu wprowadzają trochę bardziej wydajne lub bardziej użyteczne sposoby rozwiązywania tych samych zadań. W rezultacie wszystkie koncepty, idee i techniki pozostają te same dla wszystkich nowoczesnych wersji OpenGL, a więc jest to dobre, by zacząć naukę OpenGL od wersji 3.3\. Kiedy tylko będziesz czuł się gotowy lub bardziej doświadczony, będziesz mógł bez większych problemów użyć konkretnych funkcjonalności z nowszych wersji OpenGL.
 
 {: .box-error }
 Używanie najnowszych funkcjonalności z najnowszych wersji OpenGL wymaga nowoczesnych kart graficznych, które będą w stanie obsłużyć wybraną wersję OpenGL. Większość producentów GPU implementuje starsze wersje OpenGL i opcjonalnie aktywują funkcjonalności z nowszych wersji.
@@ -59,9 +59,9 @@ Podczas używania OpenGL 3.3 będziemy rzadko korzystać z rozszerzeń dla więk
 
 ## Maszyna stanów
 
-OpenGL sam w sobie jest wielką maszyną stanów: zbiorem zmiennych, które definują to w jaki sposób OpenGL działa. Stan, w którym obecnie znajduje się OpenGL jest nazywany <span class="def">kontekstem</span> (<span class="def">ang. _context_</span>). Kiedy korzystamy z OpenGL, często zmieniamy jego stan poprzez ustawianie pewnych opcji, manipulując buforami, by następnie narysować coś, używając obecnego kontekstu.
+OpenGL sam w sobie jest wielką maszyną stanów: zbiorem zmiennych, które definiują to w jaki sposób OpenGL działa. Stan, w którym obecnie znajduje się OpenGL jest nazywany <span class="def">kontekstem</span> (<span class="def">ang. _context_</span>). Kiedy korzystamy z OpenGL, często zmieniamy jego stan poprzez ustawianie pewnych opcji, manipulując buforami, by następnie narysować coś, używając obecnego kontekstu.
 
-Za każdym razem kiedy mówimy OpenGL, że teraz zamiast rysowania lini chcemy rysować trójkąty, to zmieniamy stan OpenGL poprzez zmianę zmiennych zawartych w kontekście, które są odpowiedzialne za to w jaki sposób OpenGL powinien rysować. Gdy tylko zmienimy stan, mówiąc OpenGL o tym, że powinien rysować linie, to następne komendy odpowiadające za rysowanie będą rysować linie zamiast trójkątów.
+Za każdym razem kiedy mówimy OpenGL, że teraz zamiast rysowania linii chcemy rysować trójkąty, to zmieniamy stan OpenGL poprzez zmianę zmiennych zawartych w kontekście, które są odpowiedzialne za to w jaki sposób OpenGL powinien rysować. Gdy tylko zmienimy stan, mówiąc OpenGL o tym, że powinien rysować linie, to następne komendy odpowiadające za rysowanie będą rysować linie zamiast trójkątów.
 
 Podczas pracy z OpenGL natkniemy się na kilka funkcji <span class="def">zmieniających stan (ang. _state-changing_)</span>, które zmieniają kontekst i na kilka funkcji <span class="def">korzystających z danego stanu (ang. _state-using_)</span>, które wykonują pewne operacje bazując na obecnym stanie OpenGL. Dopóki będziesz zawsze pamiętał o tym, że OpenGL to wielka maszyna stanów, to większość tych funkcjonalności będzie miała dla Ciebie więcej sensu.
 
@@ -79,7 +79,7 @@ struct object_name {
 };
 ```
 
-Kiedy chcemy użyć obiektu, ogólnie wygląda to mniej więcej tak (kontest OpenGL zwizualizowany jako duża struktura):
+Kiedy chcemy użyć obiektu, ogólnie wygląda to mniej więcej tak (kontekst OpenGL zwizualizowany jako duża struktura):
 
 ```cpp
 // Stan OpenGL  
@@ -103,7 +103,7 @@ glSetObjectOption(GL_WINDOW_TARGET, GL_OPTION_WINDOW_HEIGHT, 600);
 glBindObject(GL_WINDOW_TARGET, 0);
 ```
 
-Ten mały kawałek kodu przedstawia częsty sposób pracy w OpenGL. Na początku tworzymy obiekt i zapisujemy do niego referencję w postaci ID tego obiektu (prawdziwy obiekt jest schowany przed użytkownikiem). Następnie podpinamy obiekt do lokacji celu (ang. target) konkrentego kontekstu (lokacja przykładowego celu obiektu okna jest zdefiniowana jako <span class="var">GL_WINDOW_TARGET</span>). Następnie ustawiamy opcje okna i na końcu odpinamy obiekt poprzez ustawienie celu na obiekt o ID równego <span class="var">0</span>. Opcje, które ustawiamy są przechowywane w obiekcie, do którego odwołujemy się za pomocą <span class="var">objectId</span>.
+Ten mały kawałek kodu przedstawia częsty sposób pracy w OpenGL. Na początku tworzymy obiekt i zapisujemy do niego referencję w postaci ID tego obiektu (prawdziwy obiekt jest schowany przed użytkownikiem). Następnie podpinamy obiekt do lokacji celu (ang. target) konkretnego kontekstu (lokacja przykładowego celu obiektu okna jest zdefiniowana jako <span class="var">GL_WINDOW_TARGET</span>). Następnie ustawiamy opcje okna i na końcu odpinamy obiekt poprzez ustawienie celu na obiekt o ID równego <span class="var">0</span>. Opcje, które ustawiamy są przechowywane w obiekcie, do którego odwołujemy się za pomocą <span class="var">objectId</span>.
 
 {: .box-error }
 Przykładowe kody, które zostały przedstawione są tylko uogólnieniem tego jak OpenGL działa; w dalszej części kursu spotkasz prawdziwe przykłady.
