--- a/_posts/learnopengl/1_getting_started/2017-10-09-kamera.md
+++ b/_posts/learnopengl/1_getting_started/2017-10-09-kamera.md
@@ -9,7 +9,7 @@ mathjax: true
 
 {% include learnopengl.md link="Getting-started/Camera" %}
 
-W poprzednim samouczku omówiliśmy macierz widoku oraz zobaczyliśmy jak możemy jej użyć do poruszania się po scenie (przesuneliśmy się trochę do tyłu). OpenGL sam w sobie nie zna koncepcji _kamery_, ale możemy ją symulować, przesuwając wszystkie obiekty na scenie w odwrotnym kierunku, dając iluzję, że to **my** się poruszamy.  
+W poprzednim samouczku omówiliśmy macierz widoku oraz zobaczyliśmy jak możemy jej użyć do poruszania się po scenie (przesunęliśmy się trochę do tyłu). OpenGL sam w sobie nie zna koncepcji _kamery_, ale możemy ją symulować, przesuwając wszystkie obiekty na scenie w odwrotnym kierunku, dając iluzję, że to **my** się poruszamy.  
 
 W tym samouczku omówimy, jak możemy skonfigurować kamerę w OpenGL. Omówimy kamerę FPS, która pozwala swobodnie poruszać się po scenie 3D. Omówimy również obsługę klawiatury i myszy, a efektem będzie niestandardowa klasy kamery.
 
@@ -233,7 +233,7 @@ Daje nam to formułę do przekształcania wartości pitch i yaw do trójwymiarow
 
 ## Obsługa myszy
 
-Wartości yaw i pitch są pobierane z ruchu myszy (lub kontrolera/joysticka), w którym poziomy ruch myszy wpływa na yaw, a pionowy ruch myszy wpływa na pitch. Ideą jest to, by zapisać pozycję myszy w ostatniej ramce, a w bieżącej ramce obliczyć, jak abrdzo pozycja myszy uległy zmianie w porównaniu z ostatnią wartością w poprzedniej ramce. Im wyższa jest różnica w poziomie/pionie, tym bardziej aktualizujemy wartość pitch lub yaw, a tym samym aktualizujemy kierunek kamery.
+Wartości yaw i pitch są pobierane z ruchu myszy (lub kontrolera/joysticka), w którym poziomy ruch myszy wpływa na yaw, a pionowy ruch myszy wpływa na pitch. Ideą jest to, by zapisać pozycję myszy w ostatniej ramce, a w bieżącej ramce obliczyć, jak bardzo pozycja myszy uległy zmianie w porównaniu z ostatnią wartością w poprzedniej ramce. Im wyższa jest różnica w poziomie/pionie, tym bardziej aktualizujemy wartość pitch lub yaw, a tym samym aktualizujemy kierunek kamery.
 
 Najpierw powiedzmy GLFW, że powinien ukryć kursor i jednocześnie <span class="def">przechwytywać</span> go. Przechwytywanie kursora oznacza, że po aktywacji okna (ang. _focus_) aplikacji kursor pozostaje w oknie tej aplikacji (chyba że aplikacja traci focus lub kończy pracę). Możemy to zrobić jednym prostym wywołaniem funkcji:
 
@@ -311,7 +311,7 @@ front.z = cos(glm::radians(pitch)) * sin(glm::radians(yaw));
 cameraFront = glm::normalize(front);
 ```
 
-Ten obliczony wektor kierunku zawiera wszystkie obroty obliczane z ruchu myszy. Ponieważ wektor <span class="var">cameraFront</span> jest zawarty w funkcji glm <span class="fun">lookAt</span> jesteśmt gotowi, aby spiąć to wszystko razem.
+Ten obliczony wektor kierunku zawiera wszystkie obroty obliczane z ruchu myszy. Ponieważ wektor <span class="var">cameraFront</span> jest zawarty w funkcji glm <span class="fun">lookAt</span> jesteśmy gotowi, aby spiąć to wszystko razem.
 
 Jeśli teraz uruchomisz kod, zauważysz, że kamera wykonuje nagle duży skok, gdy okno uzyska focus Twojego kursora. Przyczyną nagłego skoku jest to, że gdy tylko kursor wejdzie do okna, funkcja wywołania zwrotnego myszy jest wywoływana z położeniem <span class="var">xpos</span> i <span class="var">ypos</span>, równym punktowi, w którym mysz została wprowadzona w obszar okna aplikacji. Zwykle jest to pozycja, która jest dosyć daleko od środka ekranu, powodując duże przesunięcia, a więc duży skok. Możemy ominąć ten problem po prostu definiując globalną zmienną bool, aby sprawdzić, czy jest to pierwszy raz, kiedy otrzymujemy dane z myszy, jeśli tak, najpierw aktualizujemy początkowe pozycje myszy do nowego <span class="var">xpos</span> i <span class="var">ypos</span>; powstałe ruchy myszy będą następnie wykorzystywać wprowadzone współrzędne położenia myszy w celu obliczenia przesunięć:
 
@@ -399,7 +399,7 @@ Mamy to. Zaimplementowaliśmy prosty system kamery pozwalający na swobodny ruch
 <source src="https://learnopengl.com/video/getting-started/camera_mouse.mp4" type="video/mp4">  
 </video></div>
 
-Możesz trochę poeksperymentować, a jeśli gdzieś utkąłeś, porównaj kod z [kodem źródłowym](https://learnopengl.com/code_viewer_gh.php?code=src/1.getting_started/7.3.camera_mouse_zoom/camera_mouse_zoom.cpp "undefined").
+Możesz trochę poeksperymentować, a jeśli gdzieś utknąłeś, porównaj kod z [kodem źródłowym](https://learnopengl.com/code_viewer_gh.php?code=src/1.getting_started/7.3.camera_mouse_zoom/camera_mouse_zoom.cpp "undefined").
 
 {: .box-note }
 Zauważ, że system kamery zaimplementowany za pomocą kątów Eulera nadal nie jest idealnym systemem. W zależności od ograniczeń i konfiguracji możesz jeszcze spotkać się z problemem [Gimbal lock](http://en.wikipedia.org/wiki/Gimbal_lock). Najlepszy system kamer mógłby być zaimplementowany przy użyciu _kwaternionów_, ale to zostawimy na później.
