--- a/_posts/learnopengl/3_model_loading/2018-08-15-assimp.md
+++ b/_posts/learnopengl/3_model_loading/2018-08-15-assimp.md
@@ -44,7 +44,7 @@ Możesz pobrać bibliotekę Assimp ze strony [autorów](http://assimp.org/index.
 
 {: .box-note }
 **Notka od tłumacza**  
-Możesz również zobaczyć jak skompliować bibliotekę Assimp w tym [tutorialu]({% post_url 2018-05-29-how-to-setup-opengl-project-with-cmake %}).
+Możesz również zobaczyć jak skompilować bibliotekę Assimp w tym [tutorialu]({% post_url 2018-05-29-how-to-setup-opengl-project-with-cmake %}).
 
 Jednak podczas budowania Assimp może pojawić się kilka problemów, więc opiszę je tutaj wraz z ich rozwiązaniami, na wypadek, gdyby któryś z was dostał te same błędy:
 
@@ -68,4 +68,4 @@ Jeśli nadal otrzymujesz jakieś błędy, poproś o pomoc w komentarzach poniże
 {: .box-note }
 Jeśli chcesz, aby program Assimp używał wielowątkowości w celu zwiększenia wydajności, możesz skompilować program Assimp wraz z biblioteką Boost. Pełne instrukcje instalacji można znaleźć na ich [stronie instalacyjnej](http://assimp.org/lib_html/install.html).
 
-Teraz powinieneś mieć skompilowaną bibliotekę Assimp, która jest połączona z aplikacją. Następny krok: imporowanie fantazyjnych modeli 3D!
+Teraz powinieneś mieć skompilowaną bibliotekę Assimp, która jest połączona z aplikacją. Następny krok: importowanie modeli 3D!
