--- a/_posts/learnopengl/3_model_loading/2018-08-20-model.md
+++ b/_posts/learnopengl/3_model_loading/2018-08-20-model.md
@@ -71,7 +71,6 @@ Najpierw zadeklarujemy obiekt <span class = "fun">Importer</span> z przestrzeni 
 *   <span class="var">aiProcess_GenNormals</span> : w rzeczywistości tworzy normalne dla każdego wierzchołka, jeśli model nie zawiera wektorów normalnych.
 *   <span class="var">aiProcess_SplitLargeMeshes</span> : dzieli duże siatki (meshe) na mniejsze siatki, co jest przydatne, jeśli przekroczyłeś już maksymalną liczbę wierzchołków i możesz przetwarzać tylko mniejsze siatki.
 *   <span class="var">aiProcess_OptimizeMeshes</span> : robi odwrotność tego, co opcja wyżej, próbując połączyć kilka siatek do jednej większej siatki, zmniejszając liczbę wywołań funkcji <span class = "fun">glDraw*()</span>.
-*   actually does the reverse by trying to join several meshes into one larger mesh, reducing drawing calls for optimization.
 
 Assimp daje duży zestaw instrukcji prost-processingu, które możesz znaleźć [tutaj](http://assimp.sourceforge.net/lib_html/postprocess_8h.html). Ładowanie modelu za pomocą Assimp jest (jak widać) zaskakująco łatwe. Ciężka praca polega na użyciu zwróconego obiektu sceny do przekonwertowania załadowanych danych na tablicę obiektów `Mesh`.
 
@@ -121,7 +120,7 @@ Najpierw sprawdzamy każdy z indeksów siatki węzła i pobieramy odpowiednią s
 
 Po przetworzeniu wszystkich siatek, iterujemy po wszystkich dzieciach węzła i wywołujemy tę samą funkcję <span class = "fun">processNode</span> dla każdego z dzieci węzła. Gdy węzeł nie ma już żadnych potomków, funkcja przestaje działać.
 
-<div class="box-note">Uważny czytelnik może zauważyć, że możemy zasadniczo zapomnieć o przetwarzaniu któregokolwiek z węzłów i po prostu przechwycić wszystkie siatki sceny bezpośrednio, nie robiąc tych skomplikowanych operacji za pomocą indeksów. Powodem, dla którego to robimy jest to, że początkową ideą korzystania z takich węzłów jest to, że definiuje ona relację rodzic-dziecko między siatkam. Dzięki przetwarzaniu rekursywnemu możemy zdefiniować relacje pomiędzy siatkami.
+<div class="box-note">Uważny czytelnik może zauważyć, że możemy zasadniczo zapomnieć o przetwarzaniu któregokolwiek z węzłów i po prostu przechwycić wszystkie siatki sceny bezpośrednio, nie robiąc tych skomplikowanych operacji za pomocą indeksów. Powodem, dla którego to robimy jest to, że początkową ideą korzystania z takich węzłów jest to, że definiuje ona relację rodzic-dziecko między siatkami. Dzięki przetwarzaniu rekursywnemu możemy zdefiniować relacje pomiędzy siatkami.
 Jednym z przypadków użycia dla takiego podejścia jest to, kiedy chcesz przetworzyć siatkę samochodu i upewnić się, że wszystkie jego dzieci (podobnie jak siatka silnika, siatka kierownicy i siatka opon) również zostaną przetworzone; taki system można łatwo utworzyć za pomocą relacji rodzic-dziecko.
 
 W tej chwili jednak nie używamy takiego systemu, ale generalnie zaleca się trzymanie się takiego podejścia, na wypadek gdybyś chciał uzyskać dodatkową kontrolę nad danymi siatki. Te relacje pomiędzy węzłami są zdefiniowane przez artystów, którzy stworzyli modele.
@@ -161,7 +160,7 @@ Przetwarzanie obiektu `aiMesh` na własny obiekt `Mesh` nie jest zbyt trudne. Ws
 
 Przetwarzanie siatki składa się zasadniczo z 3 sekcji: pobierania wszystkich danych wierzchołków, pobierania indeksów siatki i wreszcie pobierania odpowiednich danych materiałowych. Przetworzone dane są przechowywane w jednym z `3` wektorów, a z nich tworzony jest obiekt <span class ="fun">Mesh</span> i zostaje on zwrócony do funkcji wywołującej.
 
-Pobieranie danych wierzchołków jest dość proste: definiujemy strukturę <span class = "fun">Vertex</span>, którą dodajemy do tablicy <span class = "var">vertices</span> po każdej iteracji. Iterujemy po wszytskich wierzchołkach jakie istnieją w siatce (pobranych przez `mesh->mNumVertices`). W ramach iteracji chcemy wypełnić tę strukturę wszystkimi odpowiednimi danymi. Dla pozycji wierzchołków jest to wykonywane w następujący sposób:
+Pobieranie danych wierzchołków jest dość proste: definiujemy strukturę <span class = "fun">Vertex</span>, którą dodajemy do tablicy <span class = "var">vertices</span> po każdej iteracji. Iterujemy po wszystkich wierzchołkach jakie istnieją w siatce (pobranych przez `mesh->mNumVertices`). W ramach iteracji chcemy wypełnić tę strukturę wszystkimi odpowiednimi danymi. Dla pozycji wierzchołków jest to wykonywane w następujący sposób:
 
 ```cpp
     glm::vec3 vector; 
