--- a/_posts/learnopengl/4_advanced_opengl/2018-09-03-cubemaps.md
+++ b/_posts/learnopengl/4_advanced_opengl/2018-09-03-cubemaps.md
@@ -32,7 +32,7 @@ Cube mapa jest teksturą podobną do każdej innej tekstury, więc aby ją utwor
 
 Ponieważ cube mapa składa się z 6 tekstur, po jednej dla każdej ścianki, musimy wywołać sześć razy <fun>glTexImage2D</fun> z parametrami ustawionymi na wartości podobne z poprzednich samouczków. Tym razem jednak musimy ustawić parametr tekstury _target_ na konkretną ścianę cube mapy, mówiąc w zasadzie OpenGL, po której stronie cube mapy tworzymy teksturę. Oznacza to, że musimy wywołać <fun>glTexImage2D</fun> raz dla każdej ścianki cube mapy.
 
-Ponieważ mamy 6 ścianek, OpenGL zapewnia nam 6 specjalnych typów docelowych tekstur specjalnie do powiązania danej teksutry z odpowiednią ścianką cube mapy:
+Ponieważ mamy 6 ścianek, OpenGL zapewnia nam 6 specjalnych typów docelowych tekstur specjalnie do powiązania danej tekstury z odpowiednią ścianką cube mapy:
 
 <table align="center">
   <tbody><tr>
@@ -311,7 +311,7 @@ Ponieważ mamy już skonfigurowany skybox na naszej scenie, tworzenie odbić nie
     }
 ```
 
-Najpierw obliczyamy wektor kierunku kamery `I` i użyć go do obliczenia wektora odbicia `R`, który następnie wykorzystamy do spróbkowania skyboxa. Zauważ, że mamy interpolowaną zmienną <var>Normal</var> i <var>Position</var> dla danego fragmentu, więc musimy również zmienić Vertex Shader.
+Najpierw obliczamy wektor kierunku kamery `I` i użyć go do obliczenia wektora odbicia `R`, który następnie wykorzystamy do spróbkowania skyboxa. Zauważ, że mamy interpolowaną zmienną <var>Normal</var> i <var>Position</var> dla danego fragmentu, więc musimy również zmienić Vertex Shader.
 
 ```glsl
     #version 330 core
@@ -333,7 +333,7 @@ Najpierw obliczyamy wektor kierunku kamery `I` i użyć go do obliczenia wektora
     }  
 ```
 
-Używamy wektorów normalnych, więc będziemy chcieli je ponownie przekształcić za pomocą macierzy normalnych. Wektor wyjściowy <var>Position</var> jest wektorem pozycji w przestrzeni świata. Wyjściowa wartosć Vertex Shader'a <var>Position</var> służy do obliczania wektora kierunku widoku w Fragment Shaderze.
+Używamy wektorów normalnych, więc będziemy chcieli je ponownie przekształcić za pomocą macierzy normalnych. Wektor wyjściowy <var>Position</var> jest wektorem pozycji w przestrzeni świata. Wyjściowa wartość Vertex Shader'a <var>Position</var> służy do obliczania wektora kierunku widoku w Fragment Shaderze.
 
 Ponieważ używamy wektorów normalnych, będziesz chciał zaktualizować [dane wierzchołków](https://learnopengl.com/code_viewer.php?code=lighting/basic_lighting_vertex_data) i zaktualizować wskaźniki atrybutów. Pamiętaj także, aby ustawić zmienną uniform <var>cameraPos</var>.
 
