--- a/_posts/learnopengl/5_advanced_lighting/2018-10-17-bloom.md
+++ b/_posts/learnopengl/5_advanced_lighting/2018-10-17-bloom.md
@@ -46,7 +46,7 @@ Pierwszy krok wymaga od nas wyodrębnienia wszystkich jasnych kolorów sceny na 
 
 ## Wyodrębnianie jasnych kolorów
 
-Pierwszy krok wymaga od nas wyodrębnienia dwóch obrazów z wyrenderowanej sceny. Moglibyśmy renderować scenę dwukrotnie, renderując do innych framebufferów z różnymi shaderami, ale możemy również użyć zgrabnej sztuczki o nazwie <def>Multiple Render Targets (MRT)</def>, która pozwala nam określić więcej niż jedeno wyjście dla Fragment Shadera; daje nam to opcję wyodrębnienia pierwszych dwóch obrazów w jednym przejściu renderowania. Określając specyfikator layout położenia przed zmienną wyjściową Fragment Shadera, możemy kontrolować, do którego bufora kolorów zapisuje Fragment Shader:
+Pierwszy krok wymaga od nas wyodrębnienia dwóch obrazów z wyrenderowanej sceny. Moglibyśmy renderować scenę dwukrotnie, renderując do innych framebufferów z różnymi shaderami, ale możemy również użyć zgrabnej sztuczki o nazwie <def>Multiple Render Targets (MRT)</def>, która pozwala nam określić więcej niż jedno wyjście dla Fragment Shadera; daje nam to opcję wyodrębnienia pierwszych dwóch obrazów w jednym przejściu renderowania. Określając specyfikator layout położenia przed zmienną wyjściową Fragment Shadera, możemy kontrolować, do którego bufora kolorów zapisuje Fragment Shader:
 
 ```glsl
     layout (location = 0) out vec4 FragColor;
@@ -132,7 +132,7 @@ Na szczęście dla nas równanie Gaussa ma bardzo schludną właściwość, któ
 
 ![Obraz dwustopniowego rozmycia Gaussa z takimi samymi efektami jak normalne rozmycie gaussowskie, ale teraz pozwala zaoszczędzić dużo wydajności w OpenGL](/img/learnopengl/bloom_gaussian_two_pass.png){: .center-image }
 
-Oznacza to, że musimy rozmazać obraz co najmniej dwa razy, a to działa najlepiej przy ponownym użyciu obiektów bufora ramki. W szczególności do implementacji rozmycia Gaussa zamierzamy wdrożyć framebuffery _ping-pong_. Jest to para framebufferów, do których renderujemy określoną liczbę razy za kazdym razem zmieniając przeznaczenie buforów - najpierw do jednego zapisujemy, a z drugiego odczytujemy, a potem odwrotnie. Pozwala nam to najpierw rozmazać teksturę sceny w pierwszym buforze ramek, następnie rozmazać teksturę w drugim buforze ramki, potem rozmazać teksturę w pierwszym buforze rammki i tak dalej.
+Oznacza to, że musimy rozmazać obraz co najmniej dwa razy, a to działa najlepiej przy ponownym użyciu obiektów bufora ramki. W szczególności do implementacji rozmycia Gaussa zamierzamy wdrożyć framebuffery _ping-pong_. Jest to para framebufferów, do których renderujemy określoną liczbę razy za kazdym razem zmieniając przeznaczenie buforów - najpierw do jednego zapisujemy, a z drugiego odczytujemy, a potem odwrotnie. Pozwala nam to najpierw rozmazać teksturę sceny w pierwszym buforze ramek, następnie rozmazać teksturę w drugim buforze ramki, potem rozmazać teksturę w pierwszym buforze ramki i tak dalej.
 
 Zanim zagłębimy się w framebuffery, najpierw omówmy Fragment Shader rozmycia Gaussa:
 
@@ -171,7 +171,7 @@ Zanim zagłębimy się w framebuffery, najpierw omówmy Fragment Shader rozmycia
     }
 ```
 
-Tutaj bierzemy stosunkowo niewielką próbkę wag Gaussa, której używamy do przypisania określonej wagi poziomym lub pionowym próbkom wokół bieżącego fragmentu. Widać, że zasadniczo podzieliliśmy filtr rozmycia na sekcję poziomą i pionową w oparciu o dowolną wartość, jaką ustawimy w uniformie <var>horizontal</var>. Oparliśmy odległość przesunięcia na dokładnym rozmiarze texela uzyskanego przez podział `1.0` przez rozmiar tekstury (uzyskany jako `vec2` z <fun>textureSize</fun>).
+Tutaj bierzemy stosunkowo niewielką próbkę wag Gaussa, której używamy do przypisania określonej wagi poziomym lub pionowym próbkom wokół bieżącego fragmentu. Widać, że zasadniczo podzieliliśmy filtr rozmycia na sekcję poziomą i pionową w oparciu o dowolną wartość, jaką ustawimy w uniformie <var>horizontal</var>. Oparliśmy odległość przesunięcia na dokładnym rozmiarze teksela uzyskanego przez podział `1.0` przez rozmiar tekstury (uzyskany jako `vec2` z <fun>textureSize</fun>).
 
 W celu rozmazania obrazu tworzymy dwa podstawowe framebuffery, z których każdy ma tylko teksturę koloru:
 
