Publications page update

--- a/_includes/references.bib
+++ b/_includes/references.bib
@@ -1,6 +1,6 @@
 @incollection{galaj2016gpu,
   title={GPU supported dual quaternions based skinning},
-  author={Ga{\l}aj, Tomasz and Wojciechowski, Adam},
+  author={Gałaj, Tomasz and Wojciechowski, Adam},
   booktitle={Computer Game Innovations},
   pages={5--23},
   year={2016},
@@ -10,7 +10,7 @@
 
 @article{wojciechowski2016gpu,
   title={GPU assisted self-collisions of cloths},
-  author={Wojciechowski, Adam and Ga{\l}aj, Tomasz},
+  author={Wojciechowski, Adam and Gałaj, Tomasz},
   journal={Journal of Applied Computer Science},
   volume={24},
   number={2},
@@ -21,14 +21,14 @@
 
 @article{galaj2018hybrid,
   title={Hybrid Integration Method For Non-linear Light Scattering Inside Earth's Atmosphere},
-  author={Ga{\l}aj, Tomasz and Pietrusiak, Filip and Wojciechowski, Adam and Galewski, Marek},
+  author={Gałaj, Tomasz and Pietrusiak, Filip and Wojciechowski, Adam and Galewski, Marek},
   year={2018},
   pdf={https://scholar.google.com/scholar_url?url=http://epnc2018.albedo03.eu/pdf/200470.pdf&hl=pl&sa=T&oi=gsb-gga&ct=res&cd=0&d=12093353794224968708&ei=97nqW9K3MY-CygSj_rOwBA&scisig=AAGBfm1k0YjuyCMQZC-1CbF8vuT-MQB7Fw}
 }
 
 @inproceedings{galaj2018study,
   title={A Study on Image Comparison Metrics for Atmospheric Scattering Phenomenon Rendering},
-  author={Ga{\l}aj, Tomasz and Wojciechowski, Adam},
+  author={Gałaj, Tomasz and Wojciechowski, Adam},
   booktitle={International Conference on Computer Vision and Graphics},
   pages={38--47},
   year={2018},
@@ -37,7 +37,7 @@
 
 @incollection{galaj2017practical,
   title={Practical Atmospheric Scattering},
-  author={Ga{\l}aj, Tomasz and Wojciechowski, Adam},
+  author={Gałaj, Tomasz and Wojciechowski, Adam},
   booktitle={Computer Game Innovation},
   pages={165--176},
   year={2017},
