Typo fix Typo fix Typo fix

--- a/_posts/learnopengl/7_in_practice/2018-11-05-poziomy.md
+++ b/_posts/learnopengl/7_in_practice/2018-11-05-poziomy.md
@@ -284,4 +284,4 @@ Teraz możemy przesuwać wiosłem w poprzek dolnej krawędzi.
 
 Poniżej znajdziesz zaktualizowany kod klasy Game:
 
-*   **Game**: [nagłówek](https://learnopengl.com/code_viewer.php?code=in-practice/breakout/game_levels.h), [heading](https://learnopengl.com/code_viewer.php?code=in-practice/breakout/game_levels)
+*   **Game**: [nagłówek](https://learnopengl.com/code_viewer.php?code=in-practice/breakout/game_levels.h), [kod](https://learnopengl.com/code_viewer.php?code=in-practice/breakout/game_levels)
