Publications update Publications update

--- a/_includes/references.bib
+++ b/_includes/references.bib
@@ -19,6 +19,15 @@
   pdf={https://scholar.google.com/scholar_url?url=https://www.researchgate.net/profile/Adam_Wojciechowski2/publication/313557588_GPU_Assisted_Self-Collisions_of_Cloths/links/5a60d2ddaca2723281056e6b/GPU-Assisted-Self-Collisions-of-Cloths.pdf&hl=pl&sa=T&oi=gsb-gga&ct=res&cd=0&d=10055903065070256702&ei=zLnqW8DyJoX3ygS9h62wCQ&scisig=AAGBfm0I8CxhfUnC53Ez45zzJYnE6FF3Zw}
 }
 
+@incollection{galaj2017practical,
+  title={Practical Atmospheric Scattering},
+  author={Gałaj, Tomasz and Wojciechowski, Adam},
+  booktitle={Computer Game Innovation},
+  pages={165--176},
+  year={2017},
+  publisher={Lodz University of Technology Press}
+}
+
 @article{galaj2018hybrid,
   title={Hybrid Integration Method For Non-linear Light Scattering Inside Earth's Atmosphere},
   author={Gałaj, Tomasz and Pietrusiak, Filip and Wojciechowski, Adam and Galewski, Marek},
@@ -35,11 +44,13 @@
   organization={Springer}
 }
 
-@incollection{galaj2017practical,
-  title={Practical Atmospheric Scattering},
+@article{galaj2019study,
+  title={A study on numerical integration methods for rendering atmospheric scattering phenomenon},
   author={Gałaj, Tomasz and Wojciechowski, Adam},
-  booktitle={Computer Game Innovation},
-  pages={165--176},
-  year={2017},
-  publisher={Lodz University of Technology Press}
+  journal={Open Physics},
+  volume={17},
+  number={1},
+  pages={241--249},
+  year={2019},
+  publisher={De Gruyter}
 }
