Updated bib file Updated bib file Updated bib file Updated bib file Updated bib file Updated bib file Updated bib file Updated bib file Updated bib file

--- a/_includes/references.bib
+++ b/_includes/references.bib
@@ -1,56 +1,52 @@
-@incollection{galaj2016gpu,
-  title={GPU supported dual quaternions based skinning},
-  author={Gałaj, Tomasz and Wojciechowski, Adam},
-  booktitle={Computer Game Innovations},
-  pages={5--23},
-  year={2016},
-  publisher={Lodz University of Technology Press},
-  pdf={https://scholar.google.com/scholar_url?url=https://www.researchgate.net/profile/Adam_Wojciechowski2/publication/319991254_GPU_supported_dual_quaternions_based_skinning/links/59c5818b0f7e9bd2c0055ea0/GPU-supported-dual-quaternions-based-skinning.pdf&hl=pl&sa=T&oi=gsb-gga&ct=res&cd=0&d=8319228612163345304&ei=sLnqW4fXPIr0mQHMp4yQAQ&scisig=AAGBfm36DxJ-IXYfJ8ZqQv_DAaKwrmUNow}
-}
+@article{Tomasz_Galaj63155102,
+title={Heuristic based real-time hybrid rendering with the use of rasterization and ray tracing method},
+journal={Open Physics},
+author={Walewski, Patryk and Galaj, Tomasz and Szajerman, Dominik},
+doi={10.1515/phys-2019-0055},
+url={http://doi.org/10.1515/phys-2019-0055},
+issn={2391-5471},
+year={2019}
+},
 
-@article{wojciechowski2016gpu,
-  title={GPU assisted self-collisions of cloths},
-  author={Wojciechowski, Adam and Gałaj, Tomasz},
-  journal={Journal of Applied Computer Science},
-  volume={24},
-  number={2},
-  pages={39--54},
-  year={2016},
-  pdf={https://scholar.google.com/scholar_url?url=https://www.researchgate.net/profile/Adam_Wojciechowski2/publication/313557588_GPU_Assisted_Self-Collisions_of_Cloths/links/5a60d2ddaca2723281056e6b/GPU-Assisted-Self-Collisions-of-Cloths.pdf&hl=pl&sa=T&oi=gsb-gga&ct=res&cd=0&d=10055903065070256702&ei=zLnqW8DyJoX3ygS9h62wCQ&scisig=AAGBfm0I8CxhfUnC53Ez45zzJYnE6FF3Zw}
-}
+@article{Tomasz_Galaj63155709,
+title={A study on numerical integration methods for rendering atmospheric scattering phenomenon},
+journal={Open Physics},
+author={Galaj, Tomasz and Wojciechowski, Adam},
+doi={10.1515/phys-2019-0025},
+url={http://doi.org/10.1515/phys-2019-0025},
+issn={2391-5471},
+year={2019}
+},
+
+@article{Galaj2018,
+title = {A study on image comparison metrics for atmospheric scattering phenomenon rendering},
+journal = {Lecture Notes in Computer Science (including subseries Lecture Notes in Artificial Intelligence and Lecture Notes in Bioinformatics)},
+year = {2018},
+volume = {11114 LNCS},
+pages = {38-47},
+author = {Galaj, Tomasz and Wojciechowski, Adam}},
 
 @incollection{galaj2017practical,
-  title={Practical Atmospheric Scattering},
-  author={Gałaj, Tomasz and Wojciechowski, Adam},
-  booktitle={Computer Game Innovation},
-  pages={165--176},
-  year={2017},
-  publisher={Lodz University of Technology Press}
-}
+title= {Practical Atmospheric Scattering}, 
+author= {Galaj, Tomasz and Wojciechowski, Adam}, 
+booktitle= {Computer Game Innovation}, 
+pages= {165--176}, 
+year= {2017}, 
+publisher= {Lodz University of Technology Press}},
 
-@article{galaj2018hybrid,
-  title={Hybrid Integration Method For Non-linear Light Scattering Inside Earth's Atmosphere},
-  author={Gałaj, Tomasz and Pietrusiak, Filip and Wojciechowski, Adam and Galewski, Marek},
-  year={2018},
-  pdf={https://scholar.google.com/scholar_url?url=http://epnc2018.albedo03.eu/pdf/200470.pdf&hl=pl&sa=T&oi=gsb-gga&ct=res&cd=0&d=12093353794224968708&ei=97nqW9K3MY-CygSj_rOwBA&scisig=AAGBfm1k0YjuyCMQZC-1CbF8vuT-MQB7Fw}
-}
+@article{wojciechowski2016gpu, 
+title= {GPU assisted self-collisions of cloths}, 
+author= {Wojciechowski, Adam and Galaj, Tomasz}, 
+journal= {Journal of Applied Computer Science}, 
+volume= {24}, 
+number= {2}, 
+pages= {39--54}, 
+year= {2016}},
 
-@inproceedings{galaj2018study,
-  title={A Study on Image Comparison Metrics for Atmospheric Scattering Phenomenon Rendering},
-  author={Gałaj, Tomasz and Wojciechowski, Adam},
-  booktitle={International Conference on Computer Vision and Graphics},
-  pages={38--47},
-  year={2018},
-  organization={Springer}
-}
-
-@article{galaj2019study,
-  title={A study on numerical integration methods for rendering atmospheric scattering phenomenon},
-  author={Gałaj, Tomasz and Wojciechowski, Adam},
-  journal={Open Physics},
-  volume={17},
-  number={1},
-  pages={241--249},
-  year={2019},
-  publisher={De Gruyter}
-}
+@incollection{galaj2016gpu, 
+title= {GPU supported dual quaternions based skinning}, 
+author= {Galaj, Tomasz and Wojciechowski, Adam}, 
+booktitle= {Computer Game Innovations}, 
+pages= {5--23}, 
+year= {2016}, 
+publisher= {Lodz University of Technology Press}}
