--- a/_includes/references.bib
+++ b/_includes/references.bib
@@ -1,3 +1,17 @@
+@ARTICLE{TGalaj9366966,
+  author={T. {Gałaj} and F. {Pietrusiak} and M. {Galewski} and R. {Ledzion} and A. {Wojciechowski}},
+  journal={IEEE Access}, 
+  title={Hybrid Integration Method for Sunlight Atmospheric Scattering}, 
+  year={2021},
+  volume={9},
+  number={},
+  pages={40681-40694},
+  abstract={In computer graphics, the efficient rendering of a clear sky may greatly enhance the realism of synthesised interactive virtual environments. However, light atmospheric scattering, lying behind a reliable sky synthesis, is a computationally demanding process. Obtaining the highest possible accuracy and quality of the synthesised image in an efficient manner is not trivial as even minor integration errors may result in huge image artefacts. In this paper we propose two new approaches, namely the first based on the splines and the second on the Taylor expansion, in order to obtain the efficient computing of the transmittance (optical depth) component of the physically based single scattering model. We used Bruneton’s framework to compare the proposed solution with state-of-the-art methods in a single, scattering-based clear sky synthesis, in terms of image quality and performance (time). We managed to improve the quality of the single scattering effect and time performance and we removed the necessity of pre-calculating values to look-up tables for the transmittance part of the scattering integral, reducing exploited memory usage.},
+  keywords={Scattering;Atmospheric modeling;Mathematical model;Mie scattering;Numerical models;Rayleigh scattering;Optical scattering;Computer graphics;light atmospheric scattering;numerical integration;sky model;splines;Taylor expansion;transmittance},
+  doi={10.1109/ACCESS.2021.3063279},
+  ISSN={2169-3536},
+  month={}},
+
 @article{Tomasz_Galaj63155102,
 title={Heuristic based real-time hybrid rendering with the use of rasterization and ray tracing method},
 journal={Open Physics},
@@ -5,8 +19,7 @@ author={Walewski, Patryk and Galaj, Tomasz and Szajerman, Dominik},
 doi={10.1515/phys-2019-0055},
 url={http://doi.org/10.1515/phys-2019-0055},
 issn={2391-5471},
-year={2019}
-},
+year={2019}},
 
 @article{Tomasz_Galaj63155709,
 title={A study on numerical integration methods for rendering atmospheric scattering phenomenon},
@@ -15,8 +28,7 @@ author={Galaj, Tomasz and Wojciechowski, Adam},
 doi={10.1515/phys-2019-0025},
 url={http://doi.org/10.1515/phys-2019-0025},
 issn={2391-5471},
-year={2019}
-},
+year={2019}},
 
 @article{Galaj2018,
 title = {A study on image comparison metrics for atmospheric scattering phenomenon rendering},
