--- a/_includes/references.bib
+++ b/_includes/references.bib
@@ -15,7 +15,7 @@
 @article{Tomasz_Galaj63155102,
 title={Heuristic based real-time hybrid rendering with the use of rasterization and ray tracing method},
 journal={Open Physics},
-author={Walewski, Patryk and Galaj, Tomasz and Szajerman, Dominik},
+author={Walewski, Patryk and Ga{\l}aj, Tomasz and Szajerman, Dominik},
 doi={10.1515/phys-2019-0055},
 url={http://doi.org/10.1515/phys-2019-0055},
 issn={2391-5471},
@@ -24,7 +24,7 @@ year={2019}},
 @article{Tomasz_Galaj63155709,
 title={A study on numerical integration methods for rendering atmospheric scattering phenomenon},
 journal={Open Physics},
-author={Galaj, Tomasz and Wojciechowski, Adam},
+author={Ga{\l}aj, Tomasz and Wojciechowski, Adam},
 doi={10.1515/phys-2019-0025},
 url={http://doi.org/10.1515/phys-2019-0025},
 issn={2391-5471},
@@ -36,11 +36,11 @@ journal = {Lecture Notes in Computer Science (including subseries Lecture Notes 
 year = {2018},
 volume = {11114 LNCS},
 pages = {38-47},
-author = {Galaj, Tomasz and Wojciechowski, Adam}},
+author = {Ga{\l}aj, Tomasz and Wojciechowski, Adam}},
 
 @incollection{galaj2017practical,
 title= {Practical Atmospheric Scattering}, 
-author= {Galaj, Tomasz and Wojciechowski, Adam}, 
+author= {Ga{\l}aj, Tomasz and Wojciechowski, Adam}, 
 booktitle= {Computer Game Innovation}, 
 pages= {165--176}, 
 year= {2017}, 
@@ -48,7 +48,7 @@ publisher= {Lodz University of Technology Press}},
 
 @article{wojciechowski2016gpu, 
 title= {GPU assisted self-collisions of cloths}, 
-author= {Wojciechowski, Adam and Galaj, Tomasz}, 
+author= {Wojciechowski, Adam and Ga{\l}aj, Tomasz}, 
 journal= {Journal of Applied Computer Science}, 
 volume= {24}, 
 number= {2}, 
@@ -57,7 +57,7 @@ year= {2016}},
 
 @incollection{galaj2016gpu, 
 title= {GPU supported dual quaternions based skinning}, 
-author= {Galaj, Tomasz and Wojciechowski, Adam}, 
+author= {Ga{\l}aj, Tomasz and Wojciechowski, Adam}, 
 booktitle= {Computer Game Innovations}, 
 pages= {5--23}, 
 year= {2016}, 
